apply plugin: 'com.android.library'
apply plugin: 'kotlin-android'

android {
    compileSdkVersion versions.compileSdk

    defaultConfig {
        minSdkVersion versions.minSdk
        targetSdkVersion versions.tagetSdk
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }
    compileOptions {
        coreLibraryDesugaringEnabled true
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = "1.8"
    }
}

dependencies {
    implementation project(path: ':core')
    implementation project(path: ':poscore')
    implementation fileTree(dir: 'jniLibs', include: ['*.so'])
    implementation fileTree(dir: "libs", include: ["*.jar"])
    implementation 'org.bouncycastle:bcprov-jdk15on:1.64'

    implementation "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}"
    implementation "androidx.core:core-ktx:${versions.coreKtx}"
    implementation "androidx.appcompat:appcompat:${versions.appcompat}"
    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:${versions.desugarJdk}"
}